# rkyv_util

./: Cargo.toml  README.md
src/: lib.rs  mmap.rs  owned.rs
src/std/: mod.rs
