[package]
name = "rkyv_util"
description = "Tools for zero-copy deserialization with rkyv"
version = "0.1.0-alpha.1"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
rkyv = { version = "0.8.8", default-features = false, features = ["bytecheck"] }

[features]
default = ["std"]
alloc = ["rkyv/alloc"]
std = ["alloc", "rkyv/std"]
